--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -10,3 +10,10 @@ footer {
 .ft-title {
     color:  #E9DCC6;
 }
+
+@media (max-width:647px) {
+    footer {
+        flex-direction: column;
+        justify-content: center;
+    }
+}
