--- a/src/App.css
+++ b/src/App.css
@@ -7,11 +7,12 @@
 
 /* pages */
 @import "styles/home.css";
+@import "styles/about.css";
+@import "styles/legal.css";
 
 /* composants */
 @import "styles/header.css";
 @import "styles/main-menu.css";
-@import "styles/story.css";
 @import "styles/contact.css";
 @import "styles/map.css";
 @import "styles/footer.css";
@@ -20,15 +21,16 @@
 .app {
   overflow: hidden;
   width: 100vw;
+  min-height: 100vh;
   font-family: 'Aboreto', cursive;
 }
 
 .page-container {
   width: 100%;
-  /* height: 100vh; */
 }
 
 .spread-over-all {
+  /* z-index: 2; */
   position: fixed;
   top: 0;
   left: 0;
@@ -39,4 +41,21 @@
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.l-logo {
+  width: 20rem;
+  border-radius: 50%;
+}
+.m-logo {
+  width: 10rem;
+  border-radius: 50%;
+}
+.s-logo {
+  width: 5rem;
+  border-radius: 50%;
+}
+.xs-logo {
+  width: 2rem;
+  border-radius: 50%;
 }
