--- a/src/styles/map.css
+++ b/src/styles/map.css
@@ -1,3 +1,33 @@
 #map-container {
-    background-color: red;
+    width: 95%;
+    max-width: 30rem;
+    height: 30rem;
+    background-color: white;
+    border: solid #3B4B65 2px;
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    box-sizing: border-box;
+}
+
+#map {
+    width: 100%;
+    height: 98%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#contact-container {
+    background-color: white;
+    border: solid #3B4B65 2px;
+    color: #3B4B65;
+    padding: 1rem;
+    padding-left: 2rem;
+    padding-right: 2rem;
+    padding-top: 3rem;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
 }
